--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ data-bs-interval="2000" data-bs-hover="true">
     <div class="card text-center">
       <!-- can also use card-dick classs -->
        <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="col-lg-4 col-md-6">
             <div class="card-header">
               <!-- <h3>Chihuahua</h3> -->
               <h2>Free</h2>
@@ -144,7 +144,7 @@ data-bs-interval="2000" data-bs-hover="true">
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-md-12">
+          <div class="col-lg-4 col-md-6">
             <div class="card-header">
               <!-- <h3>Chihuahua</h3> -->
               <h2>$49 / mo</h2>
@@ -159,7 +159,7 @@ data-bs-interval="2000" data-bs-hover="true">
             </div>
           </div>
 
-    <div class="col-lg-4 col-md-6 col-md-12">  
+    <div class="col-lg-4 col-md-6">  
       <div class="card-header">
         <h2>$99 / mo</h2>
       </div>
